RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/AI_Case_Request__e.object-meta.xml
<CustomObject>
    <label>AI Case Request</label>
    <pluralLabel>AI Case Requests</pluralLabel>
    <fields>
        <fullName>CaseId__c</fullName>
        <description>ID of the Case to process</description>
        <label>Case ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Provider__c</fullName>
        <description>AI Provider to use for processing</description>
        <label>AI Provider</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of AI processing request</description>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Processing priority</description>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of the request</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <description>Number of retry attempts</description>
        <label>Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Request_Id__c</fullName>
        <description>ID of the original request for tracking retries</description>
        <label>Original Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <!-- PHASE 1 ADDITION: New field to link back to AI_Processing_Status__c -->
    <fields>
        <fullName>Processing_Status_Id__c</fullName>
        <description>ID of the related AI Processing Status record</description>
        <label>Processing Status ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>