RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <label>AI Provider</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>