RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <description>ID of the Case to process</description>
    <label>Case ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>