RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>