RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>