RouteLogic-v4.0.0/force-app/main/default/objects/AI_Case_Request__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>